Closed Bug 1817541 Opened 2 years ago Closed 2 years ago

WebGPU CTS fails on `Missing required 'loadValue' member of GPURenderPassColorAttachment`

Categories

(Core :: Graphics: WebGPU, defect)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox112 --- disabled
firefox113 --- disabled
firefox114 --- fixed

People

(Reporter: ErichDonGubler, Assigned: jgilbert, Mentored, NeedInfo)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

Reproduction steps:

  1. Check out revision 3bc78e5fcdaefe7cfbd564954e18f43637b67714 from try.
  2. Run ./mach wpt /webgpu/webgpu/web_platform/reftests/canvas_clear.https.html. Observe that the command logs an error of the form JavaScript error: https://web-platform.test:8443/webgpu/webgpu/web_platform/reftests/canvas_clear.html.js, line 18: TypeError: GPUCommandEncoder.beginRenderPass: Missing required 'loadValue' member of GPURenderPassColorAttachment.

Bug 1802983 contains some relevant context on why this was changed.

Summary: WebGPU CTS: `Missing required 'loadValue' member of GPURenderPassColorAttachment` → WebGPU CTS fails on `Missing required 'loadValue' member of GPURenderPassColorAttachment`
Depends on: 1817544

The severity field is not set for this bug.
:jimb, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jimb)
Duplicate of this bug: 1824642
Assignee: nobody → jgilbert
Blocks: 1826677
No longer blocks: 1826677
Duplicate of this bug: 1802983
See Also: 1802983
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fb58fa581022 Update load and store op handling to match webgpu spec changes. r=gfx-reviewers,webidl,jimb,smaug
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch

Since nightly and release are affected, beta will likely be affected too.
For more information, please visit auto_nag documentation.

Regressions: 1828302
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: