Bug 1817541 - Update load and store op handling to match webgpu spec changes. r=gfx-reviewers,webidl,jimb,smaug

Differential Revision: https://phabricator.services.mozilla.com/D174802